--- a/NoCss.html
+++ b/NoCss.html
@@ -1,18 +1,19 @@
-<h1 id="minke-remmerswaal">MINKE REMMERSWAAL</h1>
+<h1 id="cv-minke-remmerswaal">CV MINKE REMMERSWAAL</h1>
 <h2 id="personal-information">Personal information</h2>
-<h3 id="date-of-birth">Date of birth</h3>
+<h4 id="date-of-birth">Date of birth</h4>
 <p>October 12, 1989. Heemstede, The Netherlands</p>
-<h3 id="address">Address</h3>
+<h4 id="address">Address</h4>
 <p>Buitenhof 48F, 2513 AH Den Haag, The Netherlands</p>
-<h3 id="telephone">Telephone</h3>
+<h4 id="telephone">Telephone</h4>
 <p>+316 437 420 90</p>
-<h3 id="e-mail">E-mail</h3>
+<h4 id="e-mail">E-mail</h4>
 <p>minkeremmerswaal@hotmail.com</p>
 <h2 id="education">Education</h2>
-<p>-------- ———————- 2012-2014 MSc Health Economics, Policy and Law, Erasmus University Rotterdam. Specialization 2008-2011 BSc Health and Society, Wageningen University 2002-2008 VWO (gymnasium), Fioretti College, Lisse</p>
+<p>| | | |—|—-| —-| | 2012-2014 | MSc Health Economics, Policy and Law, Erasmus University Rotterdam. Specialization. | | 2008-2011 | BSc Health and Society, Wageningen University. | | 2002-2008 | VWO (gymnasium), Fioretti College, Lisse. |</p>
 <h2 id="work-experience">Work Experience</h2>
-<p>-------- ———————- 2014-present Researcher at Netherlands Bureau for Economic Policy Analysis (CPB) 2013 Internship at Dutch Healthcare Authority (NZa) 2011-2012 Board Member, Interstatelijk Studenten Overleg (ISO)</p>
+<p>| | | |—|—-| —-| | 2014-present | Researcher at Netherlands Bureau for Economic Policy Analysis (CPB) | | 2013 | Internship at Dutch Healthcare Authority (NZa) | | 2011-2012 | Board Member, Interstatelijk Studenten Overleg (ISO) |</p>
 <h2 id="extracurricular-activities">Extracurricular activities</h2>
-<p>-------- ———————- 2012-2013 Student Council, iBMG, Erasmus University Rotterdam 2011-2013 Board Member, Student Health Care Insurance, Zilveren Kruis Achmea</p>
+<p>| | | |—|—-| —-| | 2012-2013 | Student Council, iBMG, Erasmus University Rotterdam. |<br />
+| 2011-2013 | Board Member, Student Health Care Insurance, Zilveren Kruis Achmea. |</p>
 <h2 id="skills-and-interests">Skills and interests</h2>
-<p>-------- ———————- Languages Dutch (native), English (excellent), Italian (fluent), Spanish (adequate), French (adequate), German (adequate) Skills STATA, Microsoft Office, R, LaTeX, Python, Matlab, Git Hobbies and interests Music, food and cooking, cinema, literature, travelling, photography, learning new languages and discovering different cultures</p>
+<p>| | | |—|—-| —-| | Languages | Dutch (native), English (excellent), Italian (fluent), Spanish (adequate), French (adequate), German (adequate) | | Skills | STATA, Microsoft Office, R, LaTeX, Python, Matlab, Git. | | Hobbies and interests | Music, food and cooking, cinema, literature, travelling, photography, learning new languages and discovering different cultures. |</p>
