First pages commit

--- a/index.html
+++ b/index.html
@@ -20,13 +20,88 @@
 <h4 id="e-mail">E-mail</h4>
 <p>minkeremmerswaal@hotmail.com</p>
 <h2 id="education">Education</h2>
-<p>| | | |—|—-| —-| | 2012-2014 | MSc Health Economics, Policy and Law, Erasmus University Rotterdam. Specialization. | | 2008-2011 | BSc Health and Society, Wageningen University. | | 2002-2008 | VWO (gymnasium), Fioretti College, Lisse. |</p>
+<table style="width:17%;">
+<colgroup>
+<col width="5%" />
+<col width="5%" />
+<col width="5%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2012-2014</td>
+<td align="left">MSc Health Economics, Policy and Law, Erasmus University Rotterdam. Specialization.</td>
+</tr>
+<tr class="even">
+<td align="left">2008-2011</td>
+<td align="left">BSc Health and Society, Wageningen University.</td>
+</tr>
+<tr class="odd">
+<td align="left">2002-2008</td>
+<td align="left">VWO (gymnasium), Fioretti College, Lisse.</td>
+</tr>
+</tbody>
+</table>
 <h2 id="work-experience">Work Experience</h2>
-<p>| | | |—|—-| —-| | 2014-present | Researcher at Netherlands Bureau for Economic Policy Analysis (CPB) | | 2013 | Internship at Dutch Healthcare Authority (NZa) | | 2011-2012 | Board Member, Interstatelijk Studenten Overleg (ISO) |</p>
+<table style="width:17%;">
+<colgroup>
+<col width="5%" />
+<col width="5%" />
+<col width="5%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2014-present</td>
+<td align="left">Researcher at Netherlands Bureau for Economic Policy Analysis (CPB)</td>
+</tr>
+<tr class="even">
+<td align="left">2013</td>
+<td align="left">Internship at Dutch Healthcare Authority (NZa)</td>
+</tr>
+<tr class="odd">
+<td align="left">2011-2012</td>
+<td align="left">Board Member, Interstatelijk Studenten Overleg (ISO)</td>
+</tr>
+</tbody>
+</table>
 <h2 id="extracurricular-activities">Extracurricular activities</h2>
-<p>| | | |—|—-| —-| | 2012-2013 | Student Council, iBMG, Erasmus University Rotterdam. |<br />
-| 2011-2013 | Board Member, Student Health Care Insurance, Zilveren Kruis Achmea. |</p>
+<table style="width:17%;">
+<colgroup>
+<col width="5%" />
+<col width="5%" />
+<col width="5%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2012-2013</td>
+<td align="left">Student Council, iBMG, Erasmus University Rotterdam.</td>
+</tr>
+<tr class="even">
+<td align="left">2011-2013</td>
+<td align="left">Board Member, Student Health Care Insurance, Zilveren Kruis Achmea.</td>
+</tr>
+</tbody>
+</table>
 <h2 id="skills-and-interests">Skills and interests</h2>
-<p>| | | |—|—-| —-| | Languages | Dutch (native), English (excellent), Italian (fluent), Spanish (adequate), French (adequate), German (adequate) | | Skills | STATA, Microsoft Office, R, LaTeX, Python, Matlab, Git. | | Hobbies and interests | Music, food and cooking, cinema, literature, travelling, photography, learning new languages and discovering different cultures. |</p>
+<table style="width:17%;">
+<colgroup>
+<col width="5%" />
+<col width="5%" />
+<col width="5%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">Languages</td>
+<td align="left">Dutch (native), English (excellent), Italian (fluent), Spanish (adequate), French (adequate), German (adequate)</td>
+</tr>
+<tr class="even">
+<td align="left">Skills</td>
+<td align="left">STATA, Microsoft Office, R, LaTeX, Python, Matlab, Git.</td>
+</tr>
+<tr class="odd">
+<td align="left">Hobbies and interests</td>
+<td align="left">Music, food and cooking, cinema, literature, travelling, photography, learning new languages and discovering different cultures.</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
